support for SkinShifter re-implement async menu loading
Signed-off-by: To_Craft <development@tocraft.dev>